--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+theme: minima
+title: Demo data science portfolio
+author: Natasha Maher
+description: An example of a data science portfolio showcasing coursework and project.
 
